# TTT4dynamics

./: .gitignore  README.md  dataset.md  pyproject.toml
configs/: dynamic_carrier_cases.json  libero_push_box_all_friction_compare_selected.json  libero_push_box_high_friction_impulse_selected.json  libero_push_box_push_calibration_table.json  libero_push_box_push_calibration_table.md  libero_push_box_rollout_target_balanced_pilot.json  libero_push_box_rollout_target_balanced_pilot_pair_preview.json
docs/: push_box_velocity_action_design_hai-machine_2026-06-28.md
docs/architecture/: 2026-06-18_brainstorming.md
generated_bddl/: DYNAMIC_CARRIER_FLAT_pick_up_the_cream_cheese_box_from_the_moving_flat_platform_and_place_it_on_the_target_region.bddl  DYNAMIC_CARRIER_OPEN_BOX_pick_up_the_cream_cheese_box_from_the_moving_open_box_and_place_it_on_the_target_region.bddl
scripts/: calibrate_libero_push_box_push_table.py  collect_dynamic_carrier_dataset.py  collect_dynamic_carrier_lerobot_dataset.py  collect_libero_push_box_fixed_friction_dataset.py  collect_libero_push_box_friction_9mu_450_dataset.py  collect_libero_push_box_rollout_target_lerobot_dataset.py  generate_dynamic_carrier_bddl.py  generate_libero_push_box_adaptation_dataset.py  generate_libero_push_box_rollout_target_dataset.py  launch_push_box_calibrated_v2_100pairs_tmux.sh  render_dynamic_carrier_dataset_video.py  render_libero_push_box_friction_cases.py  sweep_libero_push_box_impulse.py
ttt4dynamics/: __init__.py  cases.py  dataset.py  dynamic_env.py  planner.py  push_box_libero.py  trajectories.py
(+51 files in other folders)
